--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,8 @@ tracing = { version = "0.1", features = ["log"] }
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
 tracing-bunyan-formatter = "0.3"
 tracing-log = "0.1"
+secrecy = { version = "0.8", features = ["serde"] }
+tracing-actix-web = "0.7"
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
@@ -49,3 +51,4 @@ features = [
 # They do not get included in the final application binary!
 [dev-dependencies]
 reqwest = "0.11"
+once_cell = "1"
