--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,8 @@ features = [
     "postgres",
     "uuid",
     "chrono",
-    "migrate"
+    "migrate",
+    "offline"
 ]
 
 # Dev dependencies are used exclusively when running tests or examples
