--- a/spec.yaml
+++ b/spec.yaml
@@ -31,6 +31,9 @@ services:
       - key: APP_DATABASE__DATABASE_NAME
         scope: RUN_TIME
         value: ${newsletter.DATABASE}
+      - key: RUST_LOG
+        scope: RUN_TIME
+        value: warn
 databases:
   - engine: PG
     name: newsletter
