--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "zero2prod"
 version = "0.6.14"
 edition = "2021"
 authors = ["Damijan Kozic <damijan.poglejsi@gmail.com>"]
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -60,3 +61,6 @@ claims = "0.7"
 fake = "~2.3"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
+
+[build-dependencies]
+built = "0.7"
