--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zero2prod"
-version = "0.6.14"
+version = "0.7.2"
 edition = "2021"
 authors = ["Damijan Kozic <damijan.poglejsi@gmail.com>"]
 build = "build.rs"
@@ -52,15 +52,22 @@ features = [
     "offline"
 ]
 
+[dependencies.reqwest]
+version = "0.11"
+default-features = false
+features = ["json", "rustls-tls"]
+
 # Dev dependencies are used exclusively when running tests or examples
 # They do not get included in the final application binary!
 [dev-dependencies]
-reqwest = "0.11"
 once_cell = "1"
 claims = "0.7"
 fake = "~2.3"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
+#tokio = { version = "1", features = ["rt", "macros"] }
+wiremock = "0.5"
+serde_json = "1"
 
 [build-dependencies]
 built = "0.7"
