--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zero2prod"
-version = "0.7.3"
+version = "0.7.8"
 edition = "2021"
 authors = ["Damijan Kozic <damijan.poglejsi@gmail.com>"]
 build = "build.rs"
@@ -37,6 +37,7 @@ tracing-actix-web = "0.7"
 serde-aux = "4"
 unicode-segmentation = "1"
 validator = "0.16"
+rand = { version = "0.8", features=["std_rng"] }
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
@@ -68,6 +69,7 @@ quickcheck_macros = "0.9.1"
 #tokio = { version = "1", features = ["rt", "macros"] }
 wiremock = "0.5"
 serde_json = "1"
+linkify = "0.9"
 
 [build-dependencies]
 built = "0.7"
