--- a/spec.yaml
+++ b/spec.yaml
@@ -16,6 +16,9 @@ services:
     routes:
       - path: /
     envs:
+      - key: APP_ENVIRONMENT
+        scope: RUN_TIME
+        value: production
       - key: APP_APPLICATION__BASE_URL
         scope: RUN_TIME
         value: ${APP_URL}
